// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature flag screen should render FeatureFlagItem 1`] = `
<View
  testID="feature_future_swap_row"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 20,
          "marginRight": 20,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "SoraRegular",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            {
              "color": "rgba(18, 18, 18, 1)",
            },
          ],
        ]
      }
    >
      Future swap
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <RCTSwitch
        accessibilityRole="switch"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTintColor="#02B31B"
        style={
          [
            {
              "height": 31,
              "width": 51,
            },
            {
              "backgroundColor": "#E5E5E5",
              "borderRadius": 16,
            },
          ]
        }
        testID="feature_future_swap_switch"
        thumbTintColor="#FFFFFF"
        tintColor="#E5E5E5"
        value={true}
      />
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        [
          {
            "fontFamily": "SoraRegular",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
            "marginBottom": 8,
            "paddingBottom": 8,
            "paddingLeft": 40,
            "paddingRight": 40,
            "paddingTop": 8,
          },
          {
            "color": "rgba(115, 115, 115, 1)",
          },
        ],
      ]
    }
  >
    Browse loan tokens provided by DeFiChain
  </Text>
</View>
`;

exports[`feature flag screen should render FeatureFlagScreen 1`] = `
<RCTScrollView
  style={
    [
      undefined,
      {
        "backgroundColor": "rgba(242, 242, 242, 1)",
      },
    ]
  }
  testID="features_flag_screen"
>
  <View>
    <View
      style={
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "paddingBottom": 32,
          "paddingLeft": 40,
          "paddingRight": 40,
          "paddingTop": 32,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            [
              {
                "fontFamily": "SoraRegular",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              {
                "color": "rgba(18, 18, 18, 1)",
              },
            ],
          ]
        }
      >
        Light Wallet beta features are in the user acceptance testing phase. Using beta feature(s) is encouraged, but caution is advised when using your assets.
      </Text>
    </View>
    <View
      testID="feature_future_swap_row"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderBottomLeftRadius": 8,
              "borderBottomRightRadius": 8,
              "borderTopLeftRadius": 8,
              "borderTopRightRadius": 8,
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 20,
              "marginRight": 20,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
            },
            {
              "backgroundColor": "rgba(255, 255, 255, 1)",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "SoraRegular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                {
                  "color": "rgba(18, 18, 18, 1)",
                },
              ],
            ]
          }
        >
          Future swap
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <RCTSwitch
            accessibilityRole="switch"
            onChange={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onTintColor="#02B31B"
            style={
              [
                {
                  "height": 31,
                  "width": 51,
                },
                {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 16,
                },
              ]
            }
            testID="feature_future_swap_switch"
            thumbTintColor="#FFFFFF"
            tintColor="#E5E5E5"
            value={true}
          />
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            [
              {
                "fontFamily": "SoraRegular",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 8,
                "paddingBottom": 8,
                "paddingLeft": 40,
                "paddingRight": 40,
                "paddingTop": 8,
              },
              {
                "color": "rgba(115, 115, 115, 1)",
              },
            ],
          ]
        }
      >
        Browse loan tokens provided by DeFiChain
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
